# chessgame

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.c3d3bf1  bishop.cpp  bishop.h  camera.cpp  camera.h  chessboard.cpp  chessboard.h  game.cpp  game.h  king.cpp  king.h  knight.cpp  knight.h  main.cpp  model_loader.cpp  model_loader.h  pawn.cpp  pawn.h  piece.cpp  piece.h  queen.cpp  queen.h  render.cpp  render.h  rook.cpp  rook.h  shader.cpp  shader.h
build-chess-Desktop-Debug/: CMakeCache.txt  chess  cmake_install.cmake
build-chess-Desktop-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-62dab2d3a46ee2b35d2f.json  codemodel-v2-42983601fe711225f899.json  codemodel-v2-67ca17ca08a87dcf591f.json  index-2024-12-07T16-00-42-0859.json  index-2024-12-09T18-29-01-0662.json  index-2024-12-10T15-57-49-0272.json  target-chess-ba44501c5b08f3adde18.json  target-chess-bfb22dd578b9761b5af5.json  target-chess-ff76812fb86968159fda.json
build-chess-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-8111ea67cd98d5823263.json  codemodel-v2-37fade362b270d52fd78.json  codemodel-v2-677e8e058c914c7f1eae.json  index-2024-12-07T15-58-22-0022.json  target-chess-4fd291991f7d20b42504.json
diagram/: chess.drawio  classDiagram.md
